# Здесь вы можете создавать свои исполняемые файлы (executables)
# исполянемый файл = контрольный тест

# Пример создания контрольного теста (исполняемого файла) под названием demo_benchmark.
# Исходный код предоставлен в файле demo_benchmark.cpp текущей директории.
add_executable(benchmark_push benchmark_push.cpp)
add_executable(benchmark_pop benchmark_pop.cpp)

# Примечание: Не забываем подключить (прилинковать) библиотеку ${PROJECT_NAME} с реализацией структуры данных.
target_link_libraries(benchmark_push PRIVATE project_paths project_warnings ${PROJECT_NAME})
target_link_libraries(benchmark_pop PRIVATE project_paths project_warnings ${PROJECT_NAME})
